fix: consolidate request validation for both instance and workshop requests
This improves the workflow by unifying the validation process for both
instance and workshop requests.

--- a/.github/ISSUE_TEMPLATE/workshop-request.yml
+++ b/.github/ISSUE_TEMPLATE/workshop-request.yml
@@ -3,6 +3,7 @@ description: Issue template to request bulk creation of workshop instances.
 title: "Workshop: "
 labels:
   - request-type:workshop
+  - request-creator:user
 
 body:
   - type: markdown
