--- a/.github/workflows/create-instance-from-workflow.yml
+++ b/.github/workflows/create-instance-from-workflow.yml
@@ -13,11 +13,19 @@ on:
         description: "Issue number"
         required: true
         type: number
+
 permissions:
   issues: write
+  contents: read
   checks: read
 
 jobs:
+  call-validate-request:
+    uses: ./.github/workflows/validate-request.yml
+    with:
+      issue_number: ${{ inputs.issue_number }}
+    secrets: inherit
+
   call-request-labeler:
     uses: ./.github/workflows/request-labeler.yml
     with:
