--- a/.github/workflows/on-request-opened.yml
+++ b/.github/workflows/on-request-opened.yml
@@ -7,8 +7,18 @@ on:
 permissions:
   issues: write
   contents: read
+  checks: read
 
 jobs:
+  call-validate-request:
+    # This applies to both "request-type:instance" and "request-type:workshop"
+    if:
+      ${{ contains(github.event.issue.labels.*.name, 'request-creator:user') }}
+    uses: ./.github/workflows/validate-request.yml
+    with:
+      issue_number: ${{ github.event.issue.number }}
+    secrets: inherit
+
   call-request-labeler:
     if:
       ${{ contains(github.event.issue.labels.*.name, 'request-type:instance') ||
