--- a/.github/workflows/validate-request.yml
+++ b/.github/workflows/validate-request.yml
@@ -3,13 +3,18 @@ name: Validate Request
 on:
   issues:
     types:
-      - opened
       - edited
   workflow_dispatch:
     inputs:
       issue_number:
         description: "Issue number"
         required: true
+  workflow_call:
+    inputs:
+      issue_number:
+        description: "Issue number"
+        required: true
+        type: number
 
 # Permissions needed for reacting to IssueOps commands on issues
 permissions:
@@ -26,7 +31,7 @@ jobs:
           echo "EVENT_NAME [$EVENT_NAME]"
           if [[ "$EVENT_NAME" == "issues" ]]; then
             issue_number=${{ github.event.issue.number }}
-          elif [[ "$EVENT_NAME" == "workflow_dispatch" ]]; then
+          elif [[ "$EVENT_NAME" == "workflow_dispatch" || "$EVENT_NAME" == "workflow_call" ]]; then
             issue_number=${{ github.event.inputs.issue_number }}
           else
             echo "::error ::Unsupported EVENT_NAME [$EVENT_NAME]"
