fix: Update validate-command workflow to explicitly support workshop

--- a/.github/workflows/validate-command.yml
+++ b/.github/workflows/validate-command.yml
@@ -66,7 +66,11 @@ jobs:
           TRIMMED_COMMAND="$(echo "$COMMENT_BODY" | xargs)"
           echo "Trimmed command: [$TRIMMED_COMMAND]"
 
-          SUPPORTED_COMMANDS=("/create")
+          SUPPORTED_COMMANDS=(
+            "/create"
+            "/approve"
+            "/unapprove"
+          )
 
           if printf '%s\n' "${SUPPORTED_COMMANDS[@]}" | grep -Fxq "$TRIMMED_COMMAND"; then
             echo "✅ Command [$TRIMMED_COMMAND] is supported for workshop issues."
@@ -98,7 +102,10 @@ jobs:
         with:
           comment-id: ${{ steps.validate_comment.outputs.comment-id }}
           issue-number: ${{ github.event.issue.number }}
-          body-path: "issue-commands.md"
+          body-path:
+            ${{ contains(github.event.issue.labels.*.name,
+            'request-type:instance') && 'issue-commands.md' ||
+            'workshop-issue-commands.md' }}
           edit-mode: append
 
       - name: Append action run link to failure comment
