fix(create-instance-from-workflow): start instance only when prerequisite workflows are completed

--- a/.github/workflows/create-instance-from-workflow.yml
+++ b/.github/workflows/create-instance-from-workflow.yml
@@ -40,6 +40,10 @@ jobs:
 
   control:
     runs-on: self-hosted
+    needs:
+      - call-validate-request
+      - call-request-labeler
+      - call-request-initial-comments
     steps:
       - uses: actions/checkout@v5
 
