fix: Specify issue_number as string when calling workflows
This is an attempt to fix the following errors reported when executing
`create-instance-from-workflow.yml`:

```
Create Instance from Workflow
.github/workflows/create-instance-from-workflow.yml (Line: 26, Col: 21): Unexpected value '189'
.github/workflows/create-instance-from-workflow.yml (Line: 32, Col: 21): Unexpected value '189'
.github/workflows/create-instance-from-workflow.yml (Line: 38, Col: 21): Unexpected value '189'
```

--- a/.github/workflows/create-instance-from-workflow.yml
+++ b/.github/workflows/create-instance-from-workflow.yml
@@ -23,19 +23,19 @@ jobs:
   call-validate-request:
     uses: ./.github/workflows/validate-request.yml
     with:
-      issue_number: ${{ inputs.issue_number }}
+      issue_number: "${{ inputs.issue_number }}"
     secrets: inherit
 
   call-request-labeler:
     uses: ./.github/workflows/request-labeler.yml
     with:
-      issue_number: ${{ inputs.issue_number }}
+      issue_number: "${{ inputs.issue_number }}"
     secrets: inherit
 
   call-request-initial-comments:
     uses: ./.github/workflows/request-initial-comments.yml
     with:
-      issue_number: ${{ inputs.issue_number }}
+      issue_number: "${{ inputs.issue_number }}"
     secrets: inherit
 
   control:
