fix: Declare issue_number as "string" in workflow_call

--- a/.github/workflows/request-notify-admin.yml
+++ b/.github/workflows/request-notify-admin.yml
@@ -10,7 +10,7 @@ on:
       issue_number:
         description: "Issue number"
         required: true
-        type: number
+        type: string
 
 jobs:
   request_notify_admins:
