--- a/.github/workflows/validate-request.yml
+++ b/.github/workflows/validate-request.yml
@@ -14,7 +14,7 @@ on:
       issue_number:
         description: "Issue number"
         required: true
-        type: number
+        type: string
 
 # Permissions needed for reacting to IssueOps commands on issues
 permissions:
