fix: Only support using initial-comments/labeler/notify-admin for workflow dispatch or call events

--- a/.github/workflows/request-initial-comments.yml
+++ b/.github/workflows/request-initial-comments.yml
@@ -20,9 +20,7 @@ jobs:
         id: collect_inputs
         run: |
           echo "EVENT_NAME [$EVENT_NAME]"
-          if [[ "$EVENT_NAME" == "issues" ]]; then
-            issue_number=${{ github.event.issue.number }}
-          elif [[ "$EVENT_NAME" == "workflow_dispatch" || "$EVENT_NAME" == "workflow_call" ]]; then
+          if [[ "$EVENT_NAME" == "workflow_dispatch" || "$EVENT_NAME" == "workflow_call" ]]; then
             issue_number=${{ github.event.inputs.issue_number }}
           else
             echo "::error ::Unsupported EVENT_NAME [$EVENT_NAME]"
