fix(update-workshop): Support multi-line json output
Attempt to fix error like the following:

```
Error: Unable to process file command 'output' successfully.
Error: Invalid format '  {'
```

--- a/.github/workflows/update-workshop.yml
+++ b/.github/workflows/update-workshop.yml
@@ -70,7 +70,11 @@ jobs:
           if [[ -z "$issues" || "$issues" == "null" ]]; then
             issues="[]"
           fi
-          echo "issues=$issues" >> "$GITHUB_OUTPUT"
+          {
+            echo 'issues<<EOF'
+            echo "$issues"
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
