--- a/.github/workflows/update-workshop.yml
+++ b/.github/workflows/update-workshop.yml
@@ -153,7 +153,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           ISSUE_NUMBER: ${{ matrix.issue_number }}
-          EXPECTED_COUNT: ${{ steps.extract_workshop.outputs.number_of_instances }}
+          EXPECTED_COUNT:
+            ${{ steps.extract_workshop.outputs.number_of_instances }}
           INSTANCE_PREFIX: ${{ env.INSTANCE_PREFIX }}
           ISSUES: ${{ steps.list_instances.outputs.issues }}
 
